mail added in more folder

--- a/trainingapp/src/components/slides/mainConcepts/pwBasicTemplate/pwBasicTemplate.html
+++ b/trainingapp/src/components/slides/mainConcepts/pwBasicTemplate/pwBasicTemplate.html
@@ -8,7 +8,28 @@
     The aim of this PW is to let you manipulate simple templates:
 </p>
 
-
+<ul class="exercise">
+    <li>
+        To initialize your app, if not already done, run:
+        <ul>
+            <li>
+                <em>npm install</em>
+            </li>
+            <li>
+                If you don't have a global gulp executable : <em>npm install -g gulp</em> 
+            </li>
+            <li>
+                If you don't have a global tsd executable : <em>npm install -g tsd</em>
+            </li>
+            <li>
+                <em>tsd install</em>
+            </li>
+            <li>
+                <em>npm run jspm</em>
+            </li>
+        </ul>
+    </li>
+</ul>
 
 <ul class="exercise">
     <li>
