--- a/gh/src/components/slides/ecosystem/esSix6/esSix6.html
+++ b/gh/src/components/slides/ecosystem/esSix6/esSix6.html
@@ -11,7 +11,7 @@
 </p>
 
 <editor>
-	<editortab title="arguments.js" fileType="js">
+	<editortab title="class.js" fileType="js">
 class Person{
 	constructor(gender, firstName, lastName){
 		this.gender= gender;
@@ -28,6 +28,8 @@ class Person{
 
 console.log(new Person('female', 'janis', 'joplin').toString());
 
+	</editortab>
+    <editortab title="extends.js" fileType="js">
 class Citizen extends Person{
 
 	constructor(nationality, gender, firstName, lastName){
