--- a/gh/src/components/slides/ecosystem/esSix8/esSix8.html
+++ b/gh/src/components/slides/ecosystem/esSix8/esSix8.html
@@ -18,7 +18,6 @@
 
 <editor [localExec]="true">
 	<editortab title="samples.js" fileType="js">
-//
 class SampleThis{
 	constructor(){
 		this.set= [1,2,3];
@@ -30,17 +29,15 @@ class SampleThis{
 	// used in
 	testThis() {
 
-		this.set.forEach( (id) => {
-			if (this !== undefined){
-				console.log('Arrow function: ' + this.value);
-			}
-		});
+        this.set.forEach( (id) => {
+            if (this !== undefined){console.log('Arrow function: ' + this.value + ' '+ id);}
+            else{console.log('Standard function: this is ' + this);}
+            });
 
-		this.set.forEach( function(id){
-			if (this !== undefined){
-				console.log('Standard function: ' + this.value);
-			}
-		});
+        this.set.forEach( function(id){
+            if (this !== undefined){ console.log('Standard function: ' + this.value + ' '+ id);}
+            else{console.log('Standard function: this is ' + this);}
+            });
 	}
 }
 
