--- a/trainingapp/src/components/slides/preamble/webComponents4_2/webComponents4_2.html
+++ b/trainingapp/src/components/slides/preamble/webComponents4_2/webComponents4_2.html
@@ -24,7 +24,7 @@
 		&lt;content&gt;&lt;/content&gt;
 	&lt;/template&gt;
 
-	&lt;mypopup&gt;Commposed Content&lt;/mypopup&gt;
+	&lt;mypopup&gt;Composed Content&lt;/mypopup&gt;
 
 	&lt;script type="text/javascript" src="script.js"&gt;&lt;/script&gt;
 
