--- a/trainingapp/src/components/slides/ecosystem/esSix9/esSix9.html
+++ b/trainingapp/src/components/slides/ecosystem/esSix9/esSix9.html
@@ -15,8 +15,8 @@
 </p>
 
 <editor>
-	<editortab title="samples.js" fileType="js">
-//Maps
+	<editortab title="map.js" fileType="js">
+//Map
 class Person{
 	constructor(id, firstName, lastName, age){
 		//...
@@ -32,7 +32,8 @@ class Person{
 		this.friends.get(id);
 	}
 }
-
+	</editortab>
+    <editortab title="set.js" fileType="js">
 //Set
 let friend= new Person('a', 'b');
 let friends= new Set();
