--- a/trainingapp/src/components/slides/ecosystem/esSix10/esSix10.html
+++ b/trainingapp/src/components/slides/ecosystem/esSix10/esSix10.html
@@ -8,7 +8,10 @@
 	other languages), you are probably used to format <em>Strings</em>
 	with specific methods. In javascript, most of time, this was done by
 	just concatenating needed strings.
-	From <em>ES6</em>, there is a feature for that
+	
+    From <em>ES6</em>, there is a feature called Template literals for that.
+    
+    Template literals are string literals allowing embedded expressions. You can use multi-line strings and string interpolation features with them. 
 </p>
 
 
@@ -19,7 +22,8 @@ let firstName='marvin',
     lastName='gaye',
 	descriptionOldVersion= () => '[ ' + firstName + ' , ' + lastName + ' ]',
 
-	//backticks instead of quotes, and possibly multi lines
+    //Use backticks instead of quotes to allow multi lines strings 
+    //and string interpolation ${} to display firstName & lastName
 	descriptionNewVersion= () => ` 
 		[ ${firstName} , ${lastName} ]
 	`;
