Fix typo for custo components 2 slide

--- a/trainingapp/src/components/slides/mainConcepts/customComponents2/customComponents2.html
+++ b/trainingapp/src/components/slides/mainConcepts/customComponents2/customComponents2.html
@@ -38,7 +38,7 @@
 		on services, and we could want specific providers for them
 		<ul>
 			<li>It's what the <em>providers</em> attribute is for</li>
-			<li>Remember that it's available bot at the <em>@Component</em> level and at the <em>@NgModule</em> level</li>
+			<li>Remember that it's available both at the <em>@Component</em> level and at the <em>@NgModule</em> level</li>
 		</ul>
 	</li>
 
