Missing @ in angular2/http import

--- a/trainingapp/src/components/slides/advancedConcepts/unitTests7/unitTests7.html
+++ b/trainingapp/src/components/slides/advancedConcepts/unitTests7/unitTests7.html
@@ -56,7 +56,7 @@ import {Injector} from '@angular/core';
 import {Observable} from 'rxjs/Observable';
 import 'rxjs/add/observable/of';
 
-import {Http, Response, ResponseOptions} from 'angular2/http';
+import {Http, Response, ResponseOptions} from '@angular2/http';
 
 import {Data, DataService} from './dataService';
 
