--- a/gh/src/components/slides/ecosystem/esSix7/esSix7.html
+++ b/gh/src/components/slides/ecosystem/esSix7/esSix7.html
@@ -4,9 +4,9 @@
 </h2>
 
 <p>
-	If you have already worked with <em>angular 1</em>, you probably
-	already now <em>promises</em>. <em>ES6</em> now have a native implementation
-	for that.
+	If you have already worked with <em>AngularJS</em>, you have probably
+	already use some <em>promises</em>.
+	<em>ES6</em> now have a native implementation for that.
 </p>
 <p>
 	Promises are there to help working with callbacks, to make their use easier, more
