--- a/gh/src/components/slides/mainConcepts/moreDI9/moreDI9.html
+++ b/gh/src/components/slides/mainConcepts/moreDI9/moreDI9.html
@@ -5,12 +5,12 @@
 
 <p>
     As we told before, in order to inject a service into an other entity
-    ( component / service / pipe ), <em>Angular2</em> has to know
+    ( component / service / pipe ), <em>Angular</em> has to know
     which types are required by this entity.  
 </p>
 
 <p>
-    And we also told that, to do that, <em>Angular2</em> looks for <em>metadatada</em>
+    And we also told that, to do that, <em>Angular</em> looks for <em>metadatada</em>
     associated to the given entity. Below is a transpiled component <code>Cmp1</code> which depends on
     the service  <code>Srv1</code>
 </p>
@@ -28,7 +28,7 @@ var Cmp1 = (function () {
             selector: 'cmp1',
             template '&lt;p&gt;I am CMP1 &lt;/p&gt;'
         }),
-        // These metadata tells angular2 which type has
+        // These metadata tells angular which type has
         // to be injected
         __metadata('design:paramtypes', [srv1_1.Srv1])
     ], Cmp1);
