--- a/gh/src/components/slides/mainConcepts/aboutTemplates5/aboutTemplates5.html
+++ b/gh/src/components/slides/mainConcepts/aboutTemplates5/aboutTemplates5.html
@@ -13,13 +13,13 @@
         a string
     </li>
     <li>
-        The attribute is not considered as an <em>Angular2</em>
+        The attribute is not considered as an <em>Angular</em>
         expression by default
     </li>
     <li>
         In <em>HTML5</em>, values set to attributes 
         are interpreted as strings and
-        <em>Angular2</em> respects this norm
+        <em>Angular</em> respects this norm
     </li>
     <li>
         So the following "naïve" approach to set a
