--- a/gh/src/components/slides/mainConcepts/pw1/pw1.html
+++ b/gh/src/components/slides/mainConcepts/pw1/pw1.html
@@ -1,6 +1,6 @@
 <h2 class="standard-title">
     <span class="title-category">Main Concepts</span>
-    Practical Work - Services
+    Practical Work 2 - Services
 </h2>
 
 <p>
@@ -18,28 +18,28 @@
             </li>
             <li>
                 Complete the <em>getNews</em> method by using the <em>http</em>
-                service: method is GET &amp; url is '/api/news'.
+                service: method is GET &amp; url is '/api/app/news'.
                 Be sure to keep an instance of news instead of call <em>http</em>
                 everytime
             </li>
             <li>
-                Complete the <em>addLike</em> method: method POST &amp; url is '/api/news/like/(news id)'.
+                Complete the <em>addLike</em> method: method POST &amp; url is '/api/app/news/like/(news id)'.
                 The post doesn't need specific data.
                 Remember to update the number of likes on the local news when <em>http</em> answers successfully
             </li>
             <li>
                 Complete <em>addNews</em>:
-                method POST &amp; url is /api/news &amp; POST content is the news itself.
+                method POST &amp; url is /api/app/news &amp; POST content is the news itself.
                 Update your local news on success.
             </li>
             <li>
                 Complete <em>deleteNews</em>:
-                method DELETE &amp; url is /api/news/' followed by the news id.
+                method DELETE &amp; url is /api/app/news/' followed by the news id.
                 Update your local news.
             </li>
             <li>
                 Complete <em>randomNews</em>:
-                method GET &amp; url is '/api/news/random' 
+                method GET &amp; url is '/api/app/news/random' 
             </li>            
         </ul>
     </li>
