--- a/gh/src/components/slides/mainConcepts/aboutRouter8/aboutRouter8.html
+++ b/gh/src/components/slides/mainConcepts/aboutRouter8/aboutRouter8.html
@@ -4,14 +4,14 @@
 </h2>
 
 <p>
-	Finally, we can now create routes, sub routes and load them dinamically.
+	Finally, we can now create routes, sub routes and load them dynamically.
 	We're missing one last feature, the control to leave or access a component.
 	The basic example is to authorize the access to a route only for a logged
 	user which has enough rights. But it could also be don't authorize the user
 	to leave this form component while he didn't fill the form...
 </p>
 <ul>
-	<li>For that, with <em>ng2</em> we are using <em>Guards</em></li>
+	<li>For that, with <em>Angular</em> we are using <em>Guards</em></li>
 	<li>
 		We have guards for the following scenarios (copy/paste from official doc)
 		<ul>
