--- a/gh/src/components/slides/preamble/webComponents/webComponents.html
+++ b/gh/src/components/slides/preamble/webComponents/webComponents.html
@@ -5,7 +5,7 @@
 
 <ul class="vertical-line">
 	<li>
-		Angular2 wants to be compliant with "future" promising web technologies, such as <em>Web Components</em>
+		Angular wants to be compliant with "future" promising web technologies, such as <em>Web Components</em>
 	</li>
 	<li>
 		<em>Web Components</em> consist in several concepts and standards:
@@ -17,8 +17,8 @@
 		</ul>
 	</li>
 	<li>
-		Understand <em>Web Components</em> as resusable components on differents applications, 
-		which so have to be independant enough of the rest of the page. 
+		<em>Web Components</em> brings a web standards-based way to create reusable components using nothing more than vanilla JS/HTML/CSS. <br/>
+		The result is less code, modular code, and more reuse in our apps.
 	</li>
 	<li>
 		Think about an <em>input</em> element: <input type="color">
