--- a/trainingapp/src/components/slides/ecosystem/pw1/pw1.html
+++ b/trainingapp/src/components/slides/ecosystem/pw1/pw1.html
@@ -1,12 +1,82 @@
 <h2 class="standard-title">
 	<span class="title-category">Preamble</span>
-	Practical Work - Create your own <em>Angular2</em> app
+	Practical Work - Create your own <em>Angular</em> app
 </h2>
 
 <ul>
     <li>
-        Based on the previous example, create an application from scratch.
-        Run <pre>node server</pre> to launch the server and test your app.
+    	Once you have Node.js setup, the next step is to install TypeScript. To install it, run the following npm command:<br/>
+		<pre>$ npm install -g typescript</pre><br/>
     </li>
-    
+    <li>
+    	Angular provides a utility to allow users to create and manage projects from the command line. It
+		automates tasks like creating projects, adding new controllers, etc. It’s generally a good idea to use <a href="https://github.com/angular/angular-cli">angular-cli</a> as it will help create and maintain common patterns across our application.
+		To install angular-cli, just run the following command:<br/>
+		<pre>$ npm install -g @angular/cli</pre><br/>
+	</li>
+	<li>
+		To update angular-cli to a specific version, just run the following command:<br/>
+		
+		<pre>$ npm uninstall -g @angular/cli</pre><br/>
+		<pre>$ npm cache clean</pre><br/>
+		# if npm version is > 5 then use `npm cache verify` to avoid errors (or to avoid using --force)
+		<pre>$ npm install -g @angular/cli@1.6.8</pre><br/>
+    </li>
+    <li>
+    	Now that you have your environment ready, let’s start writing our first Angular application!
+		Let’s open up the terminal and run the ng new command to create a new project from scratch: <br/>
+		<pre>$ ng new ng2ecom </pre><br/>
+    </li>
+    <li>
+    	angular-cli has a built in HTTP server that we can use to start our app. <br/>
+    	Back in the terminal, go to the root  of our application <pre>$ cd ng2-eCom </pre> 
+    	And try: <pre>$ ng serve </pre><br/>
+
+		Your application is now running on localhost port 4200. Let’s open the browser and visit:
+		<a href="http://localhost:4200">http://localhost:4200</a><br/>
+    </li>
+    <li>
+    	You can use the ng generate (or just ng g) command to generate Angular Components, Directives, Pipes and Services:
+<editor>
+ <editortab title="install/run" fileType="text">
+	$ ng g component bookDetails 
+	# will generate book-details.component
+
+	$ ng g component books
+	$ ng g component home
+	$ ng g component contact
+	$ ng g component basket
+	$ ng g component profile
+	$ ng g component login
+
+	$ ng g interface ./beans/user
+	$ ng g interface ./beans/comment
+	$ ng g interface ./beans/book
+	$ ng g interface ./beans/item
+
+	$ ng g class basket 
+	$ mv ./src/app/basket.ts ./src/app/beans/basket
+
+	$ mkdir ./src/app/services
+	$ ng g service ./services/dataContainer 
+	# will generate data-container.service
+	
+	$ ng g service ./services/books 
+	$ ng g service ./services/contact 
+	$ ng g service ./services/localStorage 
+	$ ng g service ./services/news 
+	$ ng g service ./services/user 
+
+	$ mkdir ./src/app/pipes
+	$ ng g pipe ./pipes/filterField 
+	# will generate filter-field.pipe
+
+	$ ng g pipe ./pipes/orderBy -> order-by.pipe
+	$ ng g pipe ./pipes/updateData -> update-data.pipe
+ </editortab>    
+</editor>
+
+
+ 	</li>
+
 </ul>
