--- a/trainingapp/src/components/slides/ecosystem/startFromScratch4/startFromScratch4.html
+++ b/trainingapp/src/components/slides/ecosystem/startFromScratch4/startFromScratch4.html
@@ -9,12 +9,10 @@
     your <em>ES6</em> at runtime, you're using a polyfill.
 </p>
 <ul>
-    <li><em>zone.js</em> is a library which allows to listen events and is used by the <em>Angular2</em> detection change mechanism</li>
+    <li><em>zone.js</em> is a library which allows to listen events and is used by the <em>Angular</em> detection change mechanism</li>
     <li>
-        <em>
             <em>reflect</em> is used in to add metadata into ES5, which is needed because
-            <em>Angular2</em> uses annotations to add metadata
-        </em>
+            <em>Angular</em> uses annotations to add metadata
     </li>
     <li>
         <em>typescript</em> allows you to choose the syntax you want
