--- a/trainingapp/src/components/slides/ecosystem/startFromScratch6/startFromScratch6.html
+++ b/trainingapp/src/components/slides/ecosystem/startFromScratch6/startFromScratch6.html
@@ -21,14 +21,13 @@
 </ul>
 
 <editor>
-    
     <editortab title="./package.json" fileType="js">
 {
-  "name": "MinApp",
+  "name": "MinAppW",
   "version": "1.0.1-SNAPSHOT",
   "author":{
-    "name" : "Legrand Régis",
-    "email" : "regis.legrand@worldline.com"
+    "name" : "SDCO ",
+    "email" : "SDCO@worldline.com"
   },
   "dependencies": {
     "systemjs":"0.19.38",
