--- a/trainingapp/src/components/slides/mainConcepts/aboutTemplates2/aboutTemplates2.html
+++ b/trainingapp/src/components/slides/mainConcepts/aboutTemplates2/aboutTemplates2.html
@@ -7,7 +7,7 @@
     Listening events is a common need in <em>javascript</em>
 </p>
 <ul>
-   <li>With <em>ng2</em>, this is a native behavior, and you don't need any new devlopment to manage new events</li>
+   <li>With <em>Angular</em>, this is a native behavior, and you don't need any new developpement to manage new events</li>
    <li>Just use <code>(eventToManage)= "expression" </code> </li>
    <li>Don't like the parenthesis? Then use the <code>on-eventname = "expression" </code> syntax instead</li>
 </ul>
@@ -48,5 +48,5 @@ export const ModuleDefs= {
 </editor>
 
 <p class="exercise">
-  If you know <em>ng1</em>, compare behaviors, which is better and why?
+  If you know <em>AngularJS</em>, compare behaviors, which is better and why?
 </p>
