--- a/trainingapp/src/components/editor/editor.html
+++ b/trainingapp/src/components/editor/editor.html
@@ -56,6 +56,7 @@
     &lt;script src="https://unpkg.com/zone.js@0.6.23?main=browser"&gt;&lt;/script&gt;
     &lt;script src="https://unpkg.com/reflect-metadata@0.1.3"&gt;&lt;/script&gt;
     &lt;script src="https://unpkg.com/systemjs@0.19.27/dist/system.src.js"&gt;&lt;/script&gt;
+    
 
     &lt;script src="config.js"&gt;&lt;/script&gt;
     &lt;script&gt;
@@ -103,7 +104,8 @@
       '@angular/upgrade': 'npm:@angular/upgrade/bundles/upgrade.umd.js',
 
       // other libraries
-      'rxjs':                       'npm:rxjs',
+      'rxjs':                       'npm:rxjs@5.4.3/',
+      //'rxjs':                       'npm:rxjs',
       'angular2-in-memory-web-api': 'npm:angular2-in-memory-web-api',
       'ts':                         'npm:plugin-typescript@4.0.10/lib/plugin.js',
       'typescript':                 'npm:typescript@2.0.2/lib/typescript.js',
