--- a/gh/src/components/slides/preamble/ngCompare4/ngCompare4.html
+++ b/gh/src/components/slides/preamble/ngCompare4/ngCompare4.html
@@ -5,7 +5,7 @@
 </h2>
 
 <p>
-	To port from <em>Angular</em> to <em>AngularJS</em>, nothing magic, 3 important things:
+	To port from <em>AngularJS</em> to <em>Angular</em>, nothing magic, 3 important things:
 </p>
 
 <ol>
